# jira-dev-mcp

./: .env.example  .gitignore  README.md  config.py  conftest.py  gitlab_client.py  http_common.py  jira_client.py  pyproject.toml  server.py
guides/: app-map.md  branch-naming.md  commit-convention.md  downloaded-assets.md  event-tracking.md  mr-template.md  output-format.md  review-checklist.md  shopify-architecture.md  testing-checklist.md
tests/: test_attachment_tools.py  test_diag_tools.py  test_figma_tools.py  test_gitlab_tools.py  test_http_resilience.py  test_jira_tools.py  test_jira_write_tools.py  test_no_secret_leak.py  test_notion_tools.py
tools/: __init__.py  diag_tools.py  figma_specs.py  figma_tools.py  gitlab_tools.py  jira_agile_tools.py  jira_attachment_tools.py  jira_tools.py  jira_write_tools.py  notion_tools.py
